# digitize

./: .gitignore  README.md  digitize.py  pyproject.toml
