[tool.poetry]
name = "digitize"
version = "0.1.0"
description = "Scans and PDFs to text files."
authors = ["Denise Ratasich <dratasich@users.noreply.github.com>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.9"
pytesseract = "^0.3.10"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
isort = "^5.11.4"
autoflake = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
